@@ -39,7 +39,6 @@
         font-size: .9rem;
         height: 42px;
         overflow-wrap: break-word;
-        display: -webkit-box;
         -webkit-line-clamp: 2;
         overflow: hidden;
         padding-left: .5rem;
